--- a/src/styles/pages/_form_page.scss
+++ b/src/styles/pages/_form_page.scss
@@ -122,7 +122,7 @@
 }
 
 
-#app.dark #form-container {
+#form-container.dark {
     background: $darker;
 
     .closeBtn { color: #fff; }
